// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPICard should format large values 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      10,000,000,000
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        +
        30%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render 1`] = `
<KPICard
  currency={null}
  dataFormat="decimal"
  growth={0}
  showPercentage={true}
  title=""
  value={0}
>
  <styled.div>
    <div
      className="sc-AxiKw gFhYFB"
    >
      <Grid
        as={null}
        className=""
        columns=""
      >
        <Grid__Grid
          as={null}
          className=""
          columns={2}
        >
          <div
            className="Grid__Grid-gDLjRO jcWKgV"
          >
            <Cell__Cell
              middle={true}
            >
              <div
                className="Cell__Cell-tAjrW cZXUpN"
              >
                0
              </div>
            </Cell__Cell>
            <Cell__Cell
              as={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "baseHash": 1845756808,
                    "componentId": "sc-AxhCb",
                    "isStatic": false,
                    "rules": Array [
                      "
  justify-content: flex-end;
  display: inline-flex;
  flex-direction: column;
",
                    ],
                    "staticRulesId": "",
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "shouldForwardProp": undefined,
                  "styledComponentId": "sc-AxhCb",
                  "target": "span",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              center={true}
            >
              <styled.span
                center={true}
                className="Cell__Cell-tAjrW hmKLft"
              >
                <span
                  className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
                >
                  <styled.span>
                    <span
                      className="sc-AxhUy eJslfT"
                    >
                      0%
                      <Icon
                        as={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "baseHash": 1105857511,
                              "componentId": "sc-AxgMl",
                              "isStatic": false,
                              "rules": Array [
                                "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                              ],
                              "staticRulesId": "",
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "shouldForwardProp": undefined,
                            "styledComponentId": "sc-AxgMl",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        className=""
                        customIcon={null}
                        name="minus"
                      >
                        <styled.span
                          as={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "baseHash": 1105857511,
                                "componentId": "sc-AxgMl",
                                "isStatic": false,
                                "rules": Array [
                                  "
  font-size: 1rem;
  margin-left: 0.3rem;
",
                                ],
                                "staticRulesId": "",
                              },
                              "displayName": "styled.div",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "shouldForwardProp": undefined,
                              "styledComponentId": "sc-AxgMl",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          className={
                            Array [
                              "",
                              "lni",
                              "lni-minus",
                            ]
                          }
                        >
                          <styled.div
                            className="sc-AxjAm jWlVxK lni lni-minus"
                          >
                            <div
                              className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-minus"
                            />
                          </styled.div>
                        </styled.span>
                      </Icon>
                    </span>
                  </styled.span>
                </span>
              </styled.span>
            </Cell__Cell>
          </div>
        </Grid__Grid>
      </Grid>
    </div>
  </styled.div>
</KPICard>
`;

exports[`KPICard should render currency with USD 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  USD
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      $3,789.00
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        
        0%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-minus"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render currency with USD and without percentage 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  USD
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      $3,789.00
    </div>
  </div>
</div>
`;

exports[`KPICard should render currency with euro 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Euro
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      €3,789.00
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        
        0%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-minus"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render currency with euro and without percentage 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Euro
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      €3,789.00
    </div>
  </div>
</div>
`;

exports[`KPICard should render green 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        +
        30%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render negative growth 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        
        -30%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-down"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render negative growth without percentage 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render positive growth 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        +
        30%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render positive growth without percentage 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
  </div>
</div>
`;

exports[`KPICard should render red 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        +
        30%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render two decimal points in growth 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        +
        33.33%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-chevron-up"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
    <span
      className="sc-AxhCb gyCRuM Cell__Cell-tAjrW hmKLft"
    >
      <span
        className="sc-AxhUy eJslfT"
      >
        
        0%
        <div
          className="sc-AxgMl jmOfdg sc-AxjAm jWlVxK lni lni-minus"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`KPICard should render zero growth without percentage 1`] = `
<div
  className="sc-AxiKw gFhYFB"
>
  Title
  <div
    className="Grid__Grid-gDLjRO jcWKgV"
  >
    <div
      className="Cell__Cell-tAjrW cZXUpN"
    >
      1
    </div>
  </div>
</div>
`;
